binrw/tests/ui/derive_binread_with_temp.stderr
error: `#[derive(BinRead)]` cannot create temporary fields; use `#[binrw]` or `#[binread]` instead
 --> tests/ui/derive_binread_with_temp.rs:5:5
  |
5 | /     #[br(temp)]
6 | |     a: u8,
  | |_________^
